[tool.poetry]
name = "event-tools"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <mwl@danskecommodities.com>"]
readme = "README.md"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


