[tool.poetry]
name = "messaging-tools"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <mwl@danskecommodities.com>"]
readme = "README.md"
packages = [
    {include = "event_tools"}
]

[[tool.poetry.source]]
name = "private"
url = "http://pypi.mw"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


